samples/invalid/02-id-not-snake.mmd
%% Diagram: MixedCase IDs

direction LR

Foo["A"]
Bar["B"]
Foo --> Bar
